# dsjm_trace

./: .cproject  .project  Makefile  Makefile.am  Makefile.am~  Makefile.in  NEWS  NEWS~  README  README.md  config.status  config.status.lineno  configure  configure.in~  dsjm tracing.ipynb  dsjm.doxyfile  tempTest  testRlfSloRlf.sh  testRlfSloRlf.sh~  testSloRlf.sh  testSloRlf.sh~  testTrack  testing.sh~  testingAvg.sh  testingAvg.sh~
.ipynb_checkpoints/: dsjm tracing-checkpoint.ipynb
Testing_script/: DSJM_result (Without LFO).ods  Data.ods  IDOvsSDO.ods  SLOvsIDO.ods  SLOvsRLF.ods  prevData  testResultsAvg.csv  testResultsAvg_Incomplete.csv
autom4te.cache/: output.0  requests  traces.0  traces.1
dsjm_testing/: gmon.out  testing.sh  testing.sh~
examples/: .cproject  .project  Eye.hh  FD.hh  ForwardDifference  ForwardDifference.cc  ForwardDifference.cc~  GenerateSparsityPattern.cc~  Main.cc  Makefile  Makefile.am  Makefile.am~  Makefile.in  Matrix.mtx~  Matrix1.mtx  Matrix1.mtx~  StructuredJacobian.cc  StructuredJacobian.hh  YHD.cpp~  ai.out  algorithm1.cpp~  algorithm1p.cpp~  algorithm2.h~  coloring.txt  complete.mtx  complete.mtx~  complete2.mtx  complete2.mtx~  complete3.mtx  complete3.mtx~  driver.cc  driver.cc~  driver.hh  dsjmverify  dsjmverify.cpp  flaws.cpp~  gcolor  gcolor.cpp  gcolor.hh  graph.description
examples/.deps/: CLI.Po  Configuration.Po  ForwardDifference-CLI.Po  ForwardDifference-CSegMatrix.Po  ForwardDifference-Configuration.Po  ForwardDifference-ForwardDifference.Po  ForwardDifference-IMatrix.Po  ForwardDifference-IRowColumnDS.Po  ForwardDifference-Matrix.Po  ForwardDifference-NNZTag.Po  ForwardDifference-PartitionLoader.Po  ForwardDifference-ProfitPartitionMatrix.Po  ForwardDifference-SimplePartitionedMatrix.Po  ForwardDifference-StructuredJacobian.Po  ForwardDifference-Timer.Po  ForwardDifference-Utility.Po  ForwardDifference-mmio.Po  ForwardDifference.Po  IMatrix.Po  IRowColumnDS.Po  Matrix.Po  StructuredJacobian.Po  Timer.Po  Utility.Po  driver.Po  dsjmverify.Po  gcolor-CLI.Po  gcolor-CSegMatrix.Po  gcolor-Configuration.Po  gcolor-IMatrix.Po  gcolor-IRowColumnDS.Po  gcolor-Matrix.Po  gcolor-NNZTag.Po  gcolor-PartitionLoader.Po  gcolor-ProfitPartitionMatrix.Po  gcolor-SimplePartitionedMatrix.Po  gcolor-Timer.Po  gcolor-Utility.Po  gcolor-driver.Po  gcolor-gcolor.Po  (+3 more)
examples/Profiling_Result/: Matrix1_Result.out
html/: BucketPQ_8hh_source.html  CLI_8h_source.html  Configuration_8hh_source.html  Definitions_8h_source.html  Eye_8hh_source.html  FD_8hh_source.html  IMatrix_8hh_source.html  IRowColumnDS_8hh_source.html  Matrix_8hh_source.html  NNZTag_8hh_source.html  OrderingMethod_8hh_source.html  RLF_8hh_source.html  Result_8hh_source.html  StructuredJacobian_8hh_source.html  Timer_8h_source.html  Utility_8h_source.html  annotated.html  classBucketPQ-members.html  classBucketPQ.html  classColPack_1_1Timer-members.html  (+37 more)
src/: .gitignore  BucketPQ.hh  BucketPQ.hh~  CLI.cpp  CLI.h  Configuration.cc  Configuration.hh  Definitions.h  IMatrix.cc  IMatrix.cc~  IMatrix.hh  IMatrix.hh~  IRowColumnDS.cc  IRowColumnDS.cc~  IRowColumnDS.hh  Makefile  Makefile.am  Makefile.am~  Makefile.in  Matrix.cpp  Matrix.cpp~  Matrix.hh  Matrix.hh~  NNZTag.cc  NNZTag.hh  OrderingMethod.hh  README  RLF.hh  Result.hh  Result.hh~  Timer.cpp  Timer.h  Utility.cc  Utility.h
src/.deps/: CLI.Po  CSegMatrix.Po  Configuration.Po  IMatrix.Po  IRowColumnDS.Po  Matrix.Po  NNZTag.Po  PartitionLoader.Po  ProfitPartitionMatrix.Po  SimplePartitionedMatrix.Po  Timer.Po  Utility.Po  mmio.Po
src/detail/: PriorityQueue.hh
test/src/: .gitignore  Application.cpp  ApplicationApp.cpp  ApplicationTest.cpp  ApplicationTest.h  BucketPQTest.cc  BucketPQTest.hh  HeapPQTest.cc  HeapPQTest.hh  Makefile  Makefile.am  Makefile.in  MatrixTest.cpp  MatrixTest.h  README  cppsrtdat.cpp  example_read.cpp  trimone.cpp  unittest.cpp  verify.cpp
test/src/.deps/: MatrixMarket-example_read.Po  MatrixMarket-mmio.Po  Verify-verify.Po  trimone.Po
(+113 files in other folders)
